Existing Information and Reformat
-Added ability to add existing cards and addresses during checkout
-Reformatted all HTML documents

--- a/Python/static/css/checkout.css
+++ b/Python/static/css/checkout.css
@@ -1,3 +1,9 @@
 .container {
     margin-bottom: 3rem;
 }
+
+.card{
+        margin: 0 auto; /* Added */
+        float: none; /* Added */
+        margin-bottom: 10px; /* Added */
+}
