--- a/Python/templates/address.html
+++ b/Python/templates/address.html
@@ -3,150 +3,171 @@
 {% block content %}
 {{ nav('home') }}
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
         <h1 class="display-4">Addresses</h1>
-      </div>
     </div>
+</div>
 
 <div class="album py-5 bg-light">
     <div class="container">
-      <div class="row">
-          <div class="col-md-4">
-            <div class="card mb-4" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">Thanos Purpleman</h5>
-                  <p class="card-text">100 Thanos Farm</br>Squash Patch, Farm State</br>Thanos Country</p>
-                  <a data-toggle="modal" data-target="#editModal" href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-              </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card mb-4" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Thanos Purpleman</h5>
+                        <p class="card-text">100 Thanos Farm</br>Squash Patch, Farm State</br>Thanos Country</p>
+                        <a data-toggle="modal" data-target="#editModal" href="#" class="card-link">Edit</a>
+                        <a href="#" class="card-link">Delete</a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">Thanos Purpleman</h5>
-                  <p class="card-text">100 Thanos Farm</br>Squash Patch, Farm State</br>Thanos Country</p>
-                  <a data-toggle="modal" data-target="#editModal" href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-              </div>
+            <div class="col-md-4">
+                <div class="card mb-4" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Thanos Purpleman</h5>
+                        <p class="card-text">100 Thanos Farm</br>Squash Patch, Farm State</br>Thanos Country</p>
+                        <a data-toggle="modal" data-target="#editModal" href="#" class="card-link">Edit</a>
+                        <a href="#" class="card-link">Delete</a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card mb-4" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">Thanos Purpleman</h5>
-                  <p class="card-text">100 Thanos Farm</br>Squash Patch, Farm State</br>Thanos Country</p>
-                  <a data-toggle="modal" data-target="#editModal" href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-              </div>
+            <div class="col-md-4">
+                <div class="card mb-4" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Thanos Purpleman</h5>
+                        <p class="card-text">100 Thanos Farm</br>Squash Patch, Farm State</br>Thanos Country</p>
+                        <a data-toggle="modal" data-target="#editModal" href="#" class="card-link">Edit</a>
+                        <a href="#" class="card-link">Delete</a>
+                    </div>
+                </div>
             </div>
-          </div>
-      </div>
-        <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#addModal">Add Address</button>
+        </div>
+        <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#addModal">Add Address
+        </button>
     </div>
-  </div>
-  <!-- /.container -->
+</div>
+<!-- /.container -->
 
 <!--Edit Address Modal-->
-<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="editModalTitle">Edit Address</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="inputCountry" class="sr-only">Country</label>
-            <input type="country" id="inputCountry" class="form-control" placeholder="Country" name = "country" value="{{ request.form.country }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputName" class="sr-only">Full Name</label>
-            <input type="name" id="inputName" class="form-control" placeholder="Full Name" name = "name" value="{{ request.form.name }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputAddress" class="sr-only">Street Address</label>
-            <input type="address" id="inputAddress" class="form-control" placeholder="Street Address" name = "address" value="{{ request.form.address }}" required>
-                <label for="inputApartment" class="sr-only">Apartment, suite, unit, building, floor, ect.</label>
-            <input type="apartment" id="inputApartment" class="form-control" placeholder="Apartment, suite, unit, building, floor, ect." name = "apartment" value="{{ request.form.apartment }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputCity" class="sr-only">City</label>
-            <input type="city" id="inputCity" class="form-control" placeholder="City" name = "city" value="{{ request.form.city }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputState" class="sr-only">State</label>
-            <input type="state" id="inputState" class="form-control" placeholder="State" name = "country" value="{{ request.form.state }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputZip" class="sr-only">Zip Code</label>
-            <input type="zip" id="inputZip" class="form-control" placeholder="Zip Code" name = "zip" value="{{ request.form.zip }}" required>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editModalTitle">Edit Address</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="inputCountry" class="sr-only">Country</label>
+                        <input type="country" id="inputCountry" class="form-control" placeholder="Country"
+                               name="country" value="{{ request.form.country }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputName" class="sr-only">Full Name</label>
+                        <input type="name" id="inputName" class="form-control" placeholder="Full Name" name="name"
+                               value="{{ request.form.name }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputAddress" class="sr-only">Street Address</label>
+                        <input type="address" id="inputAddress" class="form-control" placeholder="Street Address"
+                               name="address" value="{{ request.form.address }}" required>
+                        <label for="inputApartment" class="sr-only">Apartment, suite, unit, building, floor,
+                            ect.</label>
+                        <input type="apartment" id="inputApartment" class="form-control"
+                               placeholder="Apartment, suite, unit, building, floor, ect." name="apartment"
+                               value="{{ request.form.apartment }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputCity" class="sr-only">City</label>
+                        <input type="city" id="inputCity" class="form-control" placeholder="City" name="city"
+                               value="{{ request.form.city }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputState" class="sr-only">State</label>
+                        <input type="state" id="inputState" class="form-control" placeholder="State" name="country"
+                               value="{{ request.form.state }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputZip" class="sr-only">Zip Code</label>
+                        <input type="zip" id="inputZip" class="form-control" placeholder="Zip Code" name="zip"
+                               value="{{ request.form.zip }}" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
-<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="addModalTitle">Add Address</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="form-group">
-            <label for="inputCountry2" class="sr-only">Country</label>
-            <input type="country" id="inputCountry2" class="form-control" placeholder="Country" name = "country" value="{{ request.form.country }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputName2" class="sr-only">Full Name</label>
-            <input type="name" id="inputName2" class="form-control" placeholder="Full Name" name = "name" value="{{ request.form.name }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputAddress2" class="sr-only">Street Address</label>
-            <input type="address" id="inputAddress2" class="form-control" placeholder="Street Address" name = "address" value="{{ request.form.address }}" required>
-                <label for="inputApartment2" class="sr-only">Apartment, suite, unit, building, floor, ect.</label>
-            <input type="apartment" id="inputApartment2" class="form-control" placeholder="Apartment, suite, unit, building, floor, ect." name = "apartment" value="{{ request.form.apartment }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputCity2" class="sr-only">City</label>
-            <input type="city" id="inputCity2" class="form-control" placeholder="City" name = "city" value="{{ request.form.city }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputState2" class="sr-only">State</label>
-            <input type="state" id="inputState2" class="form-control" placeholder="State" name = "country" value="{{ request.form.state }}" required>
-          </div>
-            <div class="form-group">
-            <label for="inputZip2" class="sr-only">Zip Code</label>
-            <input type="zip" id="inputZip2" class="form-control" placeholder="Zip Code" name = "zip" value="{{ request.form.zip }}" required>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Add Address</button>
-      </div>
+<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addModalTitle">Add Address</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="inputCountry2" class="sr-only">Country</label>
+                        <input type="country" id="inputCountry2" class="form-control" placeholder="Country"
+                               name="country" value="{{ request.form.country }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputName2" class="sr-only">Full Name</label>
+                        <input type="name" id="inputName2" class="form-control" placeholder="Full Name" name="name"
+                               value="{{ request.form.name }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputAddress2" class="sr-only">Street Address</label>
+                        <input type="address" id="inputAddress2" class="form-control" placeholder="Street Address"
+                               name="address" value="{{ request.form.address }}" required>
+                        <label for="inputApartment2" class="sr-only">Apartment, suite, unit, building, floor,
+                            ect.</label>
+                        <input type="apartment" id="inputApartment2" class="form-control"
+                               placeholder="Apartment, suite, unit, building, floor, ect." name="apartment"
+                               value="{{ request.form.apartment }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputCity2" class="sr-only">City</label>
+                        <input type="city" id="inputCity2" class="form-control" placeholder="City" name="city"
+                               value="{{ request.form.city }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputState2" class="sr-only">State</label>
+                        <input type="state" id="inputState2" class="form-control" placeholder="State" name="country"
+                               value="{{ request.form.state }}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputZip2" class="sr-only">Zip Code</label>
+                        <input type="zip" id="inputZip2" class="form-control" placeholder="Zip Code" name="zip"
+                               value="{{ request.form.zip }}" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Add Address</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
+<!-- Footer -->
+<footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
     </div>
     <!-- /.container -->
-  </footer>
+</footer>
 {% endblock content %}
