--- a/Python/templates/signin.html
+++ b/Python/templates/signin.html
@@ -1,20 +1,22 @@
 {% extends "layouts.html" %}
 {% block content %}
- <form class="form-signin" method="POST" action="">
-      <img class="mb-4" src="/static/images/favicon.jpg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name = "email" value="{{ request.form.email }}" autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" name = "password" value="{{ request.form.password }}" required>
-      <div class="checkbox mb-3">
+<form class="form-signin" method="POST" action="">
+    <img class="mb-4" src="/static/images/favicon.jpg" alt="" width="72" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="email"
+           value="{{ request.form.email }}" autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password"
+           value="{{ request.form.password }}" required>
+    <div class="checkbox mb-3">
         <label>
-          <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me"> Remember me
         </label>
-      </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
- </form>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
+</form>
 {% endblock content %}
 
 
